--- a/source/form.html
+++ b/source/form.html
@@ -8,75 +8,24 @@
     <header class="page-header">
       <div class="main-navigation__wrapper">
         <nav class="main-navigation">
-          <a class="main-navigation__logo" href="#">
+          <a class="main-navigation__logo" href="index.html">
             <img class="main-navigation__logo-image" src="img/logo-header.svg" width="191" height="39" alt="Cat Energy">
           </a>
           <button class="main-navigation__toggle" type="button">Открыть меню</button>
           <ul class="main-navigation__list site-list">
-            <li class="site-list__item site-list__item--active">
-              <a class="site-list__item-link" href="#">Главная</a>
+            <li class="site-list__item">
+              <a class="site-list__item-link" href="index.html">Главная</a>
             </li>
             <li class="site-list__item">
               <a class="site-list__item-link" href="catalog.html">Каталог продукции</a>
             </li>
-            <li class="site-list__item">
-              <a class="site-list__item-link" href="form.html">Подбор программы</a>
+            <li class="site-list__item  site-list__item--active">
+              <a class="site-list__item-link" href="#">Подбор программы</a>
             </li>
           </ul>
         </nav>
       </div>
-      <section class="introduction">
-        <div class="introduction__wrapper">
-          <h1 class="introduction__title">Функциональное питание для котов</h1>
-          <p class="introduction__tagline">Занялся собой? Займись котом!</p>
-          <button class="button" type="button">Подобрать программу</button>
-        </div>
-      </section>
     </header>
-    <main class="page-main">
-      <section class="programs">
-        <div class="programs__wrapper">
-          <h2 class="visually-hidden">Программы питания</h2>
-          <div class="programs__item programs__item--slim">
-            <div class="programs__description-container">
-              <h3 class="programs__item-title">Похудение</h3>
-              <p class="programs__item-specification">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
-              <div class="programs__item-following-block">
-                <a class="programs__item-following-link" href="#">Каталог Slim</a>
-              </div>
-            </div>
-          </div>
-          <div class="programs__item programs__item--pro">
-            <div class="programs__description-container">
-              <h3 class="programs__item-title">Набор массы</h3>
-              <p class="programs__item-specification">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
-              <div class="programs__item-following-block">
-                <a class="programs__item-following-link" href="#">Каталог Pro</a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-      <section class="features">
-        <div class="features__wrapper">
-          <h2 class="features__title title">Как это работает</h2>
-          <ul class="features__list">
-            <li class="features__item features__item--healthy">
-              <p class="features__item-description">Функциональное питание содержит только полезные питательные вещества.</p>
-            </li>
-            <li class="features__item features__item--comfortably">
-              <p class="features__item-description">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</p>
-            </li>
-            <li class="features__item features__item--gainful">
-              <p class="features__item-description">Замените один-два приема обычной еды на наше функциональное питание.</p>
-            </li>
-            <li class="features__item features__item--profitable">
-              <p class="features__item-description">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p>
-            </li>
-          </ul>
-        </div>
-      </section>
-    </main>
     <footer class="page-footer">
       <div class="page-footer__links">
         <div class="links__wrapper">
@@ -94,7 +43,7 @@
               <li class="social-links__item">
                 <a class="social-links__item-link" href="#" aria-label="«Cat Energy» на Фейсбуке"><svg xmlns="http://www.w3.org/2000/svg" id="Layer_1" width="17" height="17" viewBox="0 0 16 16">
                   <style>
-                      .st0{fill:#231f20}
+                    .st0{fill:#231f20}
                   </style>
                   <path d="M11.8 1C13.6 1 15 2.4 15 4.2v7.7c0 1.7-1.4 3.1-3.1 3.1H4.2C2.4 15 1 13.6 1 11.8V4.2C1 2.4 2.4 1 4.2 1h7.6m0-1H4.2C1.9 0 0 1.9 0 4.2v7.7C0 14.1 1.9 16 4.2 16h7.7c2.3 0 4.2-1.9 4.2-4.2V4.2C16 1.9 14.1 0 11.8 0z" class="st0"/>
                   <path d="M8 4.9c1.7 0 3.1 1.4 3.1 3.1 0 1.7-1.4 3.1-3.1 3.1-1.7 0-3.1-1.4-3.1-3.1 0-1.7 1.4-3.1 3.1-3.1m0-1C5.7 3.9 3.9 5.7 3.9 8s1.8 4.1 4.1 4.1 4.1-1.8 4.1-4.1S10.3 3.9 8 3.9z" class="st0"/>
