--- a/source/catalog.html
+++ b/source/catalog.html
@@ -68,7 +68,7 @@
                   <td class="description-item__field">Вкус</td>
                   <td class="description-item__value">Курица</td>
                 </tr>
-                <tr class="descrption-item__price">
+                <tr class="description-item__price">
                   <td class="description-item__field">Цена</td>
                   <td class="description-item__value">1000 р</td>
                 </tr>
