--- a/source/form.html
+++ b/source/form.html
@@ -3,13 +3,15 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Кэт энерджи</title>
+    <link href="https://fonts.googleapis.com/css?family=Oswald:400,700&display=swap&subset=cyrillic" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
-    <header class="page-header">
+    <header class="page-header container">
       <div class="main-navigation main-navigation__wrapper">
         <nav class="main-navigation__block">
           <a class="main-navigation__logo" href="index.html">
-            <img class="main-navigation__logo-image" src="img/logo-header.svg" width="191" height="39" alt="Cat Energy">
+            <img class="main-navigation__logo-image" src="img/logo-mobile.svg" width="191" height="39" alt="Cat Energy">
           </a>
           <button class="main-navigation__toggle" type="button">Открыть меню</button>
           <ul class="main-navigation__list site-list">
@@ -26,28 +28,28 @@
         </nav>
       </div>
     </header>
-    <footer class="page-footer">
+    <footer class="page-footer container">
       <div class="page-footer__links-wrapper">
         <div class="page-footer__logo-container">
           <a class="page-footer__logo-link">
-            <img class="page-footer__logo-image" src="img/footer-logo.svg" width="128" height="24" alt="Cat Energy">
+            <img class="page-footer__logo-image" src="img/logo-footer.svg" width="128" height="24" alt="Cat Energy">
           </a>
         </div>
         <div class="page-footer__social-container social-links">
           <ul class="social-links__list">
             <li class="social-links__item">
-              <a class="social-links__item-link" href="#" aria-label="«Cat Energy» во вКонтакте"><img src="img/vk.svg" width="22" height="12" alt="вКонтакте"></a>
+              <a class="social-links__item-link" href="#" aria-label="«Cat Energy» во вКонтакте"><img src="img/icon-vk.svg" width="22" height="12" alt="вКонтакте"></a>
             </li>
             <li class="social-links__item">
-              <a class="social-links__item-link" href="#" aria-label="«Cat Energy» в Инстаграм"><img src="img/insta.svg" width="17" height="17" alt="Инстаграм"></a>
+              <a class="social-links__item-link" href="#" aria-label="«Cat Energy» в Инстаграм"><img src="img/icon-insta.svg" width="17" height="17" alt="Инстаграм"></a>
             </li>
             <li class="social-links__item">
-              <a class="social-links__item-link" href="#" aria-label="«Cat Energy» на Фейсбуке"><img src="img/fb.svg" width="10" height="19" alt="Фейсбук"></a>
+              <a class="social-links__item-link" href="#" aria-label="«Cat Energy» на Фейсбуке"><img src="img/icon-fb.svg" width="10" height="19" alt="Фейсбук"></a>
             </li>
           </ul>
         </div>
         <div class="page-footer__partner-container">
-          <a class="page-footer__partner-link" href="https://htmlacademy.ru/intensive/adaptive" aria-label="Ссылка на HTML Academy"><span class="page-footer__partner-name">HTML Academy</span></a>
+          <a class="page-footer__partner-link" href="https://htmlacademy.ru/intensive/adaptive" aria-label="Ссылка на HTML Academy"><img class="page-footer__partner-logo" src="img/htmlacademy.svg" width="27" height="34" alt="HTML Academy"><span class="page-footer__partner-name">HTML Academy</span></a>
         </div>
       </div>
     </footer>
