--- a/source/index.html
+++ b/source/index.html
@@ -3,13 +3,15 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Кэт энерджи</title>
+    <link href="https://fonts.googleapis.com/css?family=Oswald:400,700&display=swap&subset=cyrillic" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
-    <header class="page-header">
+    <header class="page-header container">
       <div class="main-navigation main-navigation__wrapper">
         <nav class="main-navigation__block">
           <a class="main-navigation__logo" href="#">
-            <img class="main-navigation__logo-image" src="img/logo-header.svg" width="191" height="39" alt="Cat Energy">
+            <img class="main-navigation__logo-image" src="img/logo-mobile.svg" width="191" height="39" alt="Cat Energy">
           </a>
           <button class="main-navigation__toggle" type="button">Открыть меню</button>
           <ul class="main-navigation__list site-list">
@@ -27,19 +29,19 @@
       </div>
       <section class="introduction">
         <div class="introduction__wrapper">
-          <h1 class="introduction__title">Функциональное питание для котов</h1>
+          <h1 class="introduction__title">Функциональное<br> питание для котов</h1>
           <p class="introduction__tagline">Занялся собой? Займись котом!</p>
           <button class="button" type="button">Подобрать программу</button>
         </div>
       </section>
     </header>
     <main class="page-main">
-      <section class="programs">
+      <section class="programs container">
         <div class="programs__wrapper">
           <h2 class="visually-hidden">Программы питания</h2>
           <div class="programs__item programs__item--slim">
-            <div class="programs__description-container">
-              <h3 class="programs__item-title">Похудение</h3>
+            <div class="programs__description-container programs__description-container--slim">
+              <h3 class="programs__item-title programs__item-title--slim">Похудение</h3>
               <p class="programs__item-specification">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
               <div class="programs__item-following-block">
                 <a class="programs__item-following-link" href="#">Каталог Slim</a>
@@ -47,8 +49,8 @@
             </div>
           </div>
           <div class="programs__item programs__item--pro">
-            <div class="programs__description-container">
-              <h3 class="programs__item-title">Набор массы</h3>
+            <div class="programs__description-container programs__description-container--pro">
+              <h3 class="programs__item-title programs__item-title--pro">Набор массы</h3>
               <p class="programs__item-specification">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
               <div class="programs__item-following-block">
                 <a class="programs__item-following-link" href="#">Каталог Pro</a>
@@ -57,7 +59,7 @@
           </div>
         </div>
       </section>
-      <section class="features">
+      <section class="features container">
         <div class="features__wrapper">
           <h2 class="features__title title">Как это работает</h2>
           <ul class="features__list">
@@ -78,27 +80,27 @@
       </section>
     </main>
     <footer class="page-footer">
-      <div class="page-footer__links-wrapper">
-        <div class="page-footer__logo-container">
+      <div class="page-footer__links container">
+        <div class="page-footer__logo-wrapper">
           <a class="page-footer__logo-link">
-            <img class="page-footer__logo-image" src="img/footer-logo.svg" width="128" height="24" alt="Cat Energy">
+            <img class="page-footer__logo-image" src="img/logo-footer.svg" width="128" height="24" alt="Cat Energy">
           </a>
         </div>
         <div class="page-footer__social-container social-links">
           <ul class="social-links__list">
             <li class="social-links__item">
-              <a class="social-links__item-link" href="#" aria-label="«Cat Energy» во вКонтакте"><img src="img/vk.svg" width="22" height="12" alt="вКонтакте"></a>
+              <a class="social-links__item-link" href="#" aria-label="«Cat Energy» во вКонтакте"><img src="img/icon-vk.svg" width="22" height="12" alt="вКонтакте"></a>
             </li>
             <li class="social-links__item">
-              <a class="social-links__item-link" href="#" aria-label="«Cat Energy» в Инстаграм"><img src="img/insta.svg" width="17" height="17" alt="Инстаграм"></a>
+              <a class="social-links__item-link" href="#" aria-label="«Cat Energy» в Инстаграм"><img src="img/icon-insta.svg" width="17" height="17" alt="Инстаграм"></a>
             </li>
             <li class="social-links__item">
-              <a class="social-links__item-link" href="#" aria-label="«Cat Energy» на Фейсбуке"><img src="img/fb.svg" width="10" height="19" alt="Фейсбук"></a>
+              <a class="social-links__item-link" href="#" aria-label="«Cat Energy» на Фейсбуке"><img src="img/icon-fb.svg" width="10" height="19" alt="Фейсбук"></a>
             </li>
           </ul>
         </div>
         <div class="page-footer__partner-container">
-          <a class="page-footer__partner-link" href="https://htmlacademy.ru/intensive/adaptive" aria-label="Ссылка на HTML Academy"><span class="page-footer__partner-name">HTML Academy</span></a>
+          <a class="page-footer__partner-link" href="https://htmlacademy.ru/intensive/adaptive" aria-label="Ссылка на HTML Academy"><img class="page-footer__partner-logo" src="img/htmlacademy.svg" width="27" height="34" alt="HTML Academy"><span class="page-footer__partner-name">HTML Academy</span></a>
         </div>
       </div>
     </footer>
