--- a/source/catalog.html
+++ b/source/catalog.html
@@ -213,7 +213,7 @@
                 <a href="#" class="catalog__item-link">Показать еще 100500 товаров</a>
               </h2>
               <p class="catalog__item-description catalog__item-description--more">На самом деле вкусов гораздо больше!</p>
-              <a class="button-grey" href="#">Показать все</a>
+              <a class="button button--grey" href="#">Показать все</a>
             </div>
           </div>
         </div>
