--- a/source/catalog.html
+++ b/source/catalog.html
@@ -30,8 +30,8 @@
     </header>
     <main class="page-main">
       <section class="catalog container">
+        <h1 class="catalog__title title">Каталог продукции</h1>
         <div class="catalog__wrapper">
-          <h1 class="catalog__title title">Каталог продукции</h1>
           <div class="catalog__item">
             <div class="catalog__item-consistency">
               <img class="catalog__item-image" src="img/chicken-small-mobile@1x.jpg" width="140" height="144" alt="Cat Energy Pro 500 г">
@@ -220,8 +220,8 @@
       </section>
     </main>
     <footer class="page-footer container">
-      <div class="page-footer__links-wrapper">
-        <div class="page-footer__logo-container">
+      <div class="page-footer__links">
+        <div class="page-footer__logo-wrapper">
           <a class="page-footer__logo-link">
             <img class="page-footer__logo-image" src="img/logo-footer.svg" width="128" height="24" alt="Cat Energy">
           </a>
