--- a/source/form.html
+++ b/source/form.html
@@ -29,8 +29,8 @@
       </div>
     </header>
     <footer class="page-footer container">
-      <div class="page-footer__links-wrapper">
-        <div class="page-footer__logo-container">
+      <div class="page-footer__links">
+        <div class="page-footer__logo-wrapper">
           <a class="page-footer__logo-link">
             <img class="page-footer__logo-image" src="img/logo-footer.svg" width="128" height="24" alt="Cat Energy">
           </a>
