--- a/source/index.html
+++ b/source/index.html
@@ -36,24 +36,26 @@
       </section>
     </header>
     <main class="page-main">
-      <section class="programs container">
-        <div class="programs__wrapper">
-          <h2 class="visually-hidden">Программы питания</h2>
-          <div class="programs__item programs__item--slim">
-            <div class="programs__description-container programs__description-container--slim">
-              <h3 class="programs__item-title programs__item-title--slim">Похудение</h3>
-              <p class="programs__item-specification">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
-              <div class="programs__item-following-block">
-                <a class="programs__item-following-link" href="#">Каталог Slim</a>
+      <section class="programs">
+        <h2 class="visually-hidden">Программы питания</h2>
+        <div class="programs__wrapper container">
+          <div class="programs__block">
+            <div class="programs__item programs__item--slim">
+              <div class="programs__description">
+                <h3 class="programs__item-title">Похудение</h3>
+                <p class="programs__item-specification">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
+                <div class="programs__item-following-block">
+                  <a class="programs__item-following-link" href="#">Каталог Slim</a>
+                </div>
               </div>
             </div>
-          </div>
-          <div class="programs__item programs__item--pro">
-            <div class="programs__description-container programs__description-container--pro">
-              <h3 class="programs__item-title programs__item-title--pro">Набор массы</h3>
-              <p class="programs__item-specification">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
-              <div class="programs__item-following-block">
-                <a class="programs__item-following-link" href="#">Каталог Pro</a>
+            <div class="programs__item programs__item--pro">
+              <div class="programs__description">
+                <h3 class="programs__item-title">Набор массы</h3>
+                <p class="programs__item-specification">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
+                <div class="programs__item-following-block">
+                  <a class="programs__item-following-link" href="#">Каталог Pro</a>
+                </div>
               </div>
             </div>
           </div>
@@ -79,8 +81,8 @@
         </div>
       </section>
     </main>
-    <footer class="page-footer">
-      <div class="page-footer__links container">
+    <footer class="page-footer container">
+      <div class="page-footer__links">
         <div class="page-footer__logo-wrapper">
           <a class="page-footer__logo-link">
             <img class="page-footer__logo-image" src="img/logo-footer.svg" width="128" height="24" alt="Cat Energy">
