--- a/source/catalog.html
+++ b/source/catalog.html
@@ -39,18 +39,18 @@
                 <h2 class="catalog__item-title">
                   <a href="#" class="catalog__item-link">Cat Energy Pro 500 г</a>
                 </h2>
-                <table class="catalog__item-description description-item">
-                  <tr class="description-item__volume">
-                    <td class="description-item__field">Объём</td>
-                    <td class="description-item__value">500 г</td>
+                <table class="catalog__item-description description">
+                  <tr class="description__volume">
+                    <td class="description__field">Объём</td>
+                    <td class="description__value">500 г</td>
                   </tr>
-                  <tr class="description-item__taste">
-                    <td class="description-item__field">Вкус</td>
-                    <td class="description-item__value">Курица</td>
+                  <tr class="description__taste">
+                    <td class="description__field">Вкус</td>
+                    <td class="description__value">Курица</td>
                   </tr>
-                  <tr class="description-item__price">
-                    <td class="description-item__field">Цена</td>
-                    <td class="description-item__value">700 р</td>
+                  <tr class="description__price">
+                    <td class="description__field">Цена</td>
+                    <td class="description__value">700 р</td>
                   </tr>
                 </table>
               </div>
@@ -64,18 +64,18 @@
                 <h2 class="catalog__item-title">
                   <a href="#" class="catalog__item-link">Cat Energy Pro 1000 г</a>
                 </h2>
-                <table class="catalog__item-description description-item">
-                  <tr class="description-item__volume">
-                    <td class="description-item__field">Объём</td>
-                    <td class="description-item__value">1000 г</td>
+                <table class="catalog__item-description description">
+                  <tr class="description__volume">
+                    <td class="description__field">Объём</td>
+                    <td class="description__value">1000 г</td>
                   </tr>
-                  <tr class="description-item__taste">
-                    <td class="description-item__field">Вкус</td>
-                    <td class="description-item__value">Курица</td>
+                  <tr class="description__taste">
+                    <td class="description__field">Вкус</td>
+                    <td class="description__value">Курица</td>
                   </tr>
-                  <tr class="description-item__price">
-                    <td class="description-item__field">Цена</td>
-                    <td class="description-item__value">1000 р</td>
+                  <tr class="description__price">
+                    <td class="description__field">Цена</td>
+                    <td class="description__value">1000 р</td>
                   </tr>
                 </table>
               </div>
@@ -89,18 +89,18 @@
                 <h2 class="catalog__item-title">
                   <a href="#" class="catalog__item-link">Cat Energy Pro 500 г</a>
                 </h2>
-                <table class="catalog__item-description description-item">
-                  <tr class="description-item__volume">
-                    <td class="description-item__field">Объём</td>
-                    <td class="description-item__value">500 г</td>
+                <table class="catalog__item-description description">
+                  <tr class="description__volume">
+                    <td class="description__field">Объём</td>
+                    <td class="description__value">500 г</td>
                   </tr>
-                  <tr class="description-item__taste">
-                    <td class="description-item__field">Вкус</td>
-                    <td class="description-item__value">Рыба</td>
+                  <tr class="description__taste">
+                    <td class="description__field">Вкус</td>
+                    <td class="description__value">Рыба</td>
                   </tr>
-                  <tr class="description-item__price">
-                    <td class="description-item__field">Цена</td>
-                    <td class="description-item__value">700 р</td>
+                  <tr class="description__price">
+                    <td class="description__field">Цена</td>
+                    <td class="description__value">700 р</td>
                   </tr>
                 </table>
               </div>
@@ -114,18 +114,18 @@
                 <h2 class="catalog__item-title">
                   <a href="#" class="catalog__item-link">Cat Energy Pro 1000 г</a>
                 </h2>
-                <table class="catalog__item-description description-item">
-                  <tr class="description-item__volume">
-                    <td class="description-item__field">Объём</td>
-                    <td class="description-item__value">1000 г</td>
+                <table class="catalog__item-description description">
+                  <tr class="description__volume">
+                    <td class="description__field">Объём</td>
+                    <td class="description__value">1000 г</td>
                   </tr>
-                  <tr class="description-item__taste">
-                    <td class="description-item__field">Вкус</td>
-                    <td class="description-item__value">Рыба</td>
+                  <tr class="description__taste">
+                    <td class="description__field">Вкус</td>
+                    <td class="description__value">Рыба</td>
                   </tr>
-                  <tr class="description-item__price">
-                    <td class="description-item__field">Цена</td>
-                    <td class="description-item__value">1000 р</td>
+                  <tr class="description__price">
+                    <td class="description__field">Цена</td>
+                    <td class="description__value">1000 р</td>
                   </tr>
                 </table>
               </div>
@@ -139,18 +139,18 @@
                 <h2 class="catalog__item-title">
                   <a href="#" class="catalog__item-link">Cat Energy Slim 500 г</a>
                 </h2>
-                <table class="catalog__item-description description-item">
-                  <tr class="description-item__volume">
-                    <td class="description-item__field">Объём</td>
-                    <td class="description-item__value">500 г</td>
+                <table class="catalog__item-description description">
+                  <tr class="description__volume">
+                    <td class="description__field">Объём</td>
+                    <td class="description__value">500 г</td>
                   </tr>
-                  <tr class="description-item__taste">
-                    <td class="description-item__field">Вкус</td>
-                    <td class="description-item__value">Гречка</td>
+                  <tr class="description__taste">
+                    <td class="description__field">Вкус</td>
+                    <td class="description__value">Гречка</td>
                   </tr>
-                  <tr class="description-item__price">
-                    <td class="description-item__field">Цена</td>
-                    <td class="description-item__value">400 р</td>
+                  <tr class="description__price">
+                    <td class="description__field">Цена</td>
+                    <td class="description__value">400 р</td>
                   </tr>
                 </table>
               </div>
@@ -164,18 +164,18 @@
                 <h2 class="catalog__item-title">
                   <a href="#" class="catalog__item-link">Cat Energy Slim 1000 г</a>
                 </h2>
-                <table class="catalog__item-description description-item">
-                  <tr class="description-item__volume">
-                    <td class="description-item__field">Объём</td>
-                    <td class="description-item__value">1000 г</td>
+                <table class="catalog__item-description description">
+                  <tr class="description__volume">
+                    <td class="description__field">Объём</td>
+                    <td class="description__value">1000 г</td>
                   </tr>
-                  <tr class="description-item__taste">
-                    <td class="description-item__field">Вкус</td>
-                    <td class="description-item__value">Гречка</td>
+                  <tr class="description__taste">
+                    <td class="description__field">Вкус</td>
+                    <td class="description__value">Гречка</td>
                   </tr>
-                  <tr class="description-item__price">
-                    <td class="description-item__field">Цена</td>
-                    <td class="description-item__value">700 р</td>
+                  <tr class="description__price">
+                    <td class="description__field">Цена</td>
+                    <td class="description__value">700 р</td>
                   </tr>
                 </table>
               </div>
@@ -189,18 +189,18 @@
                 <h2 class="catalog__item-title">
                   <a href="#" class="catalog__item-link">Cat Energy Slim 500 г</a>
                 </h2>
-                <table class="catalog__item-description description-item">
-                  <tr class="description-item__volume">
-                    <td class="description-item__field">Объём</td>
-                    <td class="description-item__value">500 г</td>
+                <table class="catalog__item-description description">
+                  <tr class="description__volume">
+                    <td class="description__field">Объём</td>
+                    <td class="description__value">500 г</td>
                   </tr>
-                  <tr class="description-item__taste">
-                    <td class="description-item__field">Вкус</td>
-                    <td class="description-item__value">Рис</td>
+                  <tr class="description__item-taste">
+                    <td class="description__item-field">Вкус</td>
+                    <td class="description__item-value">Рис</td>
                   </tr>
-                  <tr class="description-item__price">
-                    <td class="description-item__field">Цена</td>
-                    <td class="description-item__value">500 р</td>
+                  <tr class="description__item-price">
+                    <td class="description__item-field">Цена</td>
+                    <td class="description__item-value">500 р</td>
                   </tr>
                 </table>
               </div>
