--- a/source/catalog.html
+++ b/source/catalog.html
@@ -209,7 +209,7 @@
           </div>
           <div class="catalog__item catalog__item--more">
             <div class="catalog__item-info">
-              <h2 class="catalog__item-title catalog__title--more">
+              <h2 class="catalog__item-title catalog__item-title--more">
                 <a href="#" class="catalog__item-link">Показать еще 100500 товаров</a>
               </h2>
               <p class="catalog__item-description catalog__item-description--more">На самом деле вкусов гораздо больше!</p>
