--- a/source/catalog.html
+++ b/source/catalog.html
@@ -194,13 +194,13 @@
                     <td class="description__field">Объём</td>
                     <td class="description__value">500 г</td>
                   </tr>
-                  <tr class="description__item-taste">
-                    <td class="description__item-field">Вкус</td>
-                    <td class="description__item-value">Рис</td>
+                  <tr class="description__taste">
+                    <td class="description__field">Вкус</td>
+                    <td class="description__value">Рис</td>
                   </tr>
-                  <tr class="description__item-price">
-                    <td class="description__item-field">Цена</td>
-                    <td class="description__item-value">500 р</td>
+                  <tr class="description__price">
+                    <td class="description__field">Цена</td>
+                    <td class="description__value">500 р</td>
                   </tr>
                 </table>
               </div>
