slabonervnum ne smotret'

--- a/source/form.html
+++ b/source/form.html
@@ -7,7 +7,7 @@
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
-    <header class="page-header container">
+    <header class="page-header">
       <div class="main-navigation main-navigation__wrapper">
         <nav class="main-navigation__block">
           <a class="main-navigation__logo" href="index.html">
@@ -49,7 +49,7 @@
           </ul>
         </div>
         <div class="page-footer__partner-container">
-          <a class="page-footer__partner-link" href="https://htmlacademy.ru/intensive/adaptive" aria-label="Ссылка на HTML Academy"><img class="page-footer__partner-logo" src="img/htmlacademy.svg" width="27" height="34" alt="HTML Academy"><span class="page-footer__partner-name">HTML Academy</span></a>
+          <a class="page-footer__partner-link" href="https://htmlacademy.ru/intensive/adaptive" aria-label="Ссылка на HTML Academy"><span class="page-footer__partner-name">HTML Academy</span><img class="page-footer__partner-logo" src="img/htmlacademy.svg" width="27" height="34" alt="HTML Academy"></a>
         </div>
       </div>
     </footer>
