--- a/source/catalog.html
+++ b/source/catalog.html
@@ -7,22 +7,26 @@
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
-    <header class="page-header container">
-      <div class="main-navigation main-navigation__wrapper">
+    <header class="page-header">
+      <div class="main-navigation main-navigation__wrapper container">
         <nav class="main-navigation__block">
           <a class="main-navigation__logo" href="index.html">
-            <img class="main-navigation__logo-image" src="img/logo-mobile.svg" width="191" height="39" alt="Cat Energy">
+            <picture>
+              <source media="(min-width: 1300px)" srcset="img/logo-desktop.svg">
+              <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
+              <img class="main-navigation__logo-image" src="img/logo-mobile.svg" width="191" height="39" alt="Cat Energy">
+            </picture>
           </a>
           <button class="main-navigation__toggle" type="button">Открыть меню</button>
-          <ul class="main-navigation__list site-list">
-            <li class="site-list__item">
-              <a class="site-list__item-link" href="index.html">Главная</a>
+          <ul class="main-navigation__list">
+            <li class="main-navigation__item">
+              <a class="main-navigation__link" href="index.html">Главная</a>
             </li>
-            <li class="site-list__item  site-list__item--active">
-              <a class="site-list__item-link" href="catalog.html">Каталог продукции</a>
+            <li class="main-navigation__item main-navigation__item--active">
+              <a class="main-navigation__link" href="#">Каталог продукции</a>
             </li>
-            <li class="site-list__item">
-              <a class="site-list__item-link" href="form.html">Подбор программы</a>
+            <li class="main-navigation__item">
+              <a class="main-navigation__link" href="form.html">Подбор программы</a>
             </li>
           </ul>
         </nav>
@@ -34,7 +38,13 @@
         <div class="catalog__wrapper">
           <div class="catalog__item">
             <div class="catalog__item-consistency">
-              <img class="catalog__item-image" src="img/chicken-small-mobile@1x.jpg" width="140" height="144" alt="Cat Energy Pro 500 г">
+              <a class="catalog__image-link">
+                <picture>
+                  <source media="(min-width: 1300px)" srcset="img/chicken-small-desktop@1x.png, img/chicken-small-desktop@2x.png 2x">
+                  <source media="(min-width: 768px)" srcset="img/chicken-small-tablet@1x.png, img/chicken-small-tablet@2x.png 2x">
+                  <img class="catalog__item-image" src="img/chicken-small-mobile@1x.jpg" alt="Cat Energy Pro 500 г">
+                </picture>
+              </a>
               <div class="catalog__item-info">
                 <h2 class="catalog__item-title">
                   <a href="#" class="catalog__item-link">Cat Energy Pro 500 г</a>
@@ -55,11 +65,19 @@
                 </table>
               </div>
             </div>
+            <div class="catalog__button-container">
               <a class="button button--purchase" href="#">Заказать</a>
+            </div>
           </div>
           <div class="catalog__item">
             <div class="catalog__item-consistency">
-              <img class="catalog__item-image" src="img/chicken-big-mobile@1x.jpg" width="140" height="144" alt="Cat Energy Pro 1000 г">
+              <a class="catalog__image-link">
+                <picture>
+                  <source media="(min-width: 1300px)" srcset="img/chicken-big-desktop@1x.png, img/chicken-big-desktop@2x.png 2x">
+                  <source media="(min-width: 768px)" srcset="img/chicken-big-tablet@1x.png, img/chicken-big-tablet@2x.png 2x">
+                  <img class="catalog__item-image" src="img/chicken-big-mobile@1x.jpg" alt="Cat Energy Pro 1000 г">
+                </picture>
+              </a>
               <div class="catalog__item-info">
                 <h2 class="catalog__item-title">
                   <a href="#" class="catalog__item-link">Cat Energy Pro 1000 г</a>
@@ -80,11 +98,19 @@
                 </table>
               </div>
             </div>
-            <a class="button button--purchase" href="#">Заказать</a>
+            <div class="catalog__button-container">
+              <a class="button button--purchase" href="#">Заказать</a>
+            </div>
           </div>
           <div class="catalog__item">
             <div class="catalog__item-consistency">
-              <img class="catalog__item-image" src="img/fish-small-mobile@1x.jpg" width="140" height="144" alt="Cat Energy Pro 500 г">
+              <a class="catalog__image-link">
+                <picture>
+                  <source media="(min-width: 1300px)" srcset="img/fish-small-desktop@1x.png, img/fish-small-desktop@2x.png 2x">
+                  <source media="(min-width: 768px)" srcset="img/fish-small-tablet@1x.png, img/chicken-small-tablet@2x.png 2x">
+                  <img class="catalog__item-image" src="img/fish-small-mobile@1x.jpg" alt="Cat Energy Pro 500 г">
+                </picture>
+              </a>
               <div class="catalog__item-info">
                 <h2 class="catalog__item-title">
                   <a href="#" class="catalog__item-link">Cat Energy Pro 500 г</a>
@@ -105,11 +131,19 @@
                 </table>
               </div>
             </div>
-            <a class="button button--purchase" href="#">Заказать</a>
+            <div class="catalog__button-container">
+              <a class="button button--purchase" href="#">Заказать</a>
+            </div>
           </div>
           <div class="catalog__item">
             <div class="catalog__item-consistency">
-              <img class="catalog__item-image" src="img/fish-big-mobile@1x.jpg" width="140" height="144" alt="Cat Energy Pro 1000 г">
+              <a class="catalog__image-link">
+                <picture>
+                  <source media="(min-width: 1300px)" srcset="img/fish-big-desktop@1x.png, img/fish-big-desktop@2x.png 2x">
+                  <source media="(min-width: 768px)" srcset="img/fish-big-tablet@1x.png, img/fish-big-tablet@2x.png 2x">
+                  <img class="catalog__item-image" src="img/fish-big-mobile@1x.jpg" alt="Cat Energy Pro 1000 г">
+                </picture>
+              </a>
               <div class="catalog__item-info">
                 <h2 class="catalog__item-title">
                   <a href="#" class="catalog__item-link">Cat Energy Pro 1000 г</a>
@@ -130,11 +164,19 @@
                 </table>
               </div>
             </div>
-            <a class="button button--purchase" href="#">Заказать</a>
+            <div class="catalog__button-container">
+              <a class="button button--purchase" href="#">Заказать</a>
+            </div>
           </div>
           <div class="catalog__item">
             <div class="catalog__item-consistency">
-              <img class="catalog__item-image" src="img/buckwheat-small-mobile@1x.jpg" width="140" height="144" alt="Cat Energy Slim 500 г">
+              <a class="catalog__image-link">
+                <picture>
+                  <source media="(min-width: 1300px)" srcset="img/buckwheat-small-desktop@1x.png, img/buckwheat-small-desktop@2x.png 2x">
+                  <source media="(min-width: 768px)" srcset="img/buckwheat-small-tablet@1x.png, img/buckwheat-small-tablet@2x.png 2x">
+                  <img class="catalog__item-image" src="img/buckwheat-small-mobile@1x.jpg" alt="Cat Energy Slim 500 г">
+                </picture>
+              </a>
               <div class="catalog__item-info">
                 <h2 class="catalog__item-title">
                   <a href="#" class="catalog__item-link">Cat Energy Slim 500 г</a>
@@ -155,11 +197,19 @@
                 </table>
               </div>
             </div>
-            <a class="button button--purchase" href="#">Заказать</a>
+            <div class="catalog__button-container">
+              <a class="button button--purchase" href="#">Заказать</a>
+            </div>
           </div>
           <div class="catalog__item">
             <div class="catalog__item-consistency">
-              <img class="catalog__item-image" src="img/buckwheat-big-mobile@1x.jpg" width="140" height="144" alt="Cat Energy Slim 1000 г">
+              <a class="catalog__image-link">
+                <picture>
+                  <source media="(min-width: 1300px)" srcset="img/buckwheat-big-desktop@1x.png, img/buckwheat-big-desktop@2x.png 2x">
+                  <source media="(min-width: 768px)" srcset="img/buckwheat-big-tablet@1x.png, img/chicken-small-tablet@2x.png 2x">
+                  <img class="catalog__item-image" src="img/buckwheat-big-mobile@1x.jpg" alt="Cat Energy Slim 1000 г">
+                </picture>
+              </a>
               <div class="catalog__item-info">
                 <h2 class="catalog__item-title">
                   <a href="#" class="catalog__item-link">Cat Energy Slim 1000 г</a>
@@ -180,11 +230,19 @@
                 </table>
               </div>
             </div>
-            <a class="button button--purchase" href="#">Заказать</a>
+            <div class="catalog__button-container">
+              <a class="button button--purchase" href="#">Заказать</a>
+            </div>
           </div>
           <div class="catalog__item">
             <div class="catalog__item-consistency">
-              <img class="catalog__item-image" src="img/rice-small-mobile@1x.jpg" width="140" height="144" alt="Cat Energy Slim 500 г">
+              <a class="catalog__image-link">
+                <picture>
+                  <source media="(min-width: 1300px)" srcset="img/rice-small-desktop@1x.png, img/rice-small-desktop@2x.png 2x">
+                  <source media="(min-width: 768px)" srcset="img/rice-small-tablet@1x.png, img/rice-small-tablet@2x.png 2x">
+                  <img class="catalog__item-image" src="img/rice-small-mobile@1x.jpg" alt="Cat Energy Slim 500 г">
+                </picture>
+              </a>
               <div class="catalog__item-info">
                 <h2 class="catalog__item-title">
                   <a href="#" class="catalog__item-link">Cat Energy Slim 500 г</a>
@@ -205,21 +263,25 @@
                 </table>
               </div>
             </div>
-            <a class="button button--purchase" href="#">Заказать</a>
+            <div class="catalog__button-container">
+              <a class="button button--purchase" href="#">Заказать</a>
+            </div>
           </div>
           <div class="catalog__item catalog__item--more">
-            <div class="catalog__item-info">
-              <h2 class="catalog__item-title catalog__item-title--more">
+            <div class="catalog__item-info--more">
+              <h2 class="catalog__item-title--more">
                 <a href="#" class="catalog__item-link">Показать еще 100500 товаров</a>
               </h2>
               <p class="catalog__item-description catalog__item-description--more">На самом деле вкусов гораздо больше!</p>
-              <a class="button button--grey" href="#">Показать все</a>
+              <div class="catalog__button-container">
+                <a class="button button--grey" href="#">Показать все</a>
+              </div>
             </div>
           </div>
         </div>
       </section>
     </main>
-    <footer class="page-footer container">
+    <footer class="page-footer">
       <div class="page-footer__links">
         <div class="page-footer__logo-wrapper">
           <a class="page-footer__logo-link">
@@ -240,7 +302,7 @@
           </ul>
         </div>
         <div class="page-footer__partner-container">
-          <a class="page-footer__partner-link" href="https://htmlacademy.ru/intensive/adaptive" aria-label="Ссылка на HTML Academy"><img class="page-footer__partner-logo" src="img/htmlacademy.svg" width="27" height="34" alt="HTML Academy"><span class="page-footer__partner-name">HTML Academy</span></a>
+          <a class="page-footer__partner-link" href="https://htmlacademy.ru/intensive/adaptive" aria-label="Ссылка на HTML Academy"><span class="page-footer__partner-name">HTML Academy</span><img class="page-footer__partner-logo" src="img/htmlacademy.svg" width="27" height="34" alt="HTML Academy"></a>
         </div>
       </div>
     </footer>
