--- a/source/index.html
+++ b/source/index.html
@@ -7,31 +7,44 @@
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
-    <header class="page-header container">
-      <div class="main-navigation main-navigation__wrapper">
-        <nav class="main-navigation__block">
-          <a class="main-navigation__logo" href="#">
-            <img class="main-navigation__logo-image" src="img/logo-mobile.svg" width="191" height="39" alt="Cat Energy">
-          </a>
-          <button class="main-navigation__toggle" type="button">Открыть меню</button>
-          <ul class="main-navigation__list site-list">
-            <li class="site-list__item site-list__item--active">
-              <a class="site-list__item-link" href="#">Главная</a>
-            </li>
-            <li class="site-list__item">
-              <a class="site-list__item-link" href="catalog.html">Каталог продукции</a>
-            </li>
-            <li class="site-list__item">
-              <a class="site-list__item-link" href="form.html">Подбор программы</a>
-            </li>
-          </ul>
-        </nav>
+    <header class="page-header">
+      <div class="main-navigation main-navigation__wrapper container">
+        <div class="main-navigation__preview">
+          <nav class="main-navigation__block">
+            <a class="main-navigation__logo" href="#">
+              <picture>
+                <source media="(min-width: 1300px)" srcset="img/logo-desktop.svg">
+                <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
+                <img class="main-navigation__logo-image" src="img/logo-mobile.svg" width="191" height="39" alt="Cat Energy">
+              </picture>
+            </a>
+            <button class="main-navigation__toggle" type="button">Открыть меню</button>
+            <ul class="main-navigation__list">
+              <li class="main-navigation__item main-navigation__item--active">
+                <a class="main-navigation__link" href="#">Главная</a>
+              </li>
+              <li class="main-navigation__item">
+                <a class="main-navigation__link" href="catalog.html">Каталог продукции</a>
+              </li>
+              <li class="main-navigation__item">
+                <a class="main-navigation__link" href="form.html">Подбор программы</a>
+              </li>
+            </ul>
+          </nav>
+        </div>
       </div>
       <section class="introduction">
-        <div class="introduction__wrapper">
+        <div class="introduction__wrapper container">
           <h1 class="introduction__title">Функциональное<br> питание для котов</h1>
           <p class="introduction__tagline">Занялся собой? Займись котом!</p>
-          <button class="button" type="button">Подобрать программу</button>
+          <picture>
+            <source media="(min-width: 1300px)" srcset="img/index-can-desktop@1x.png, img/index-can-desktop@2x.png 2x">
+            <source media="(min-width: 768px)" srcset="img/index-can-tablet@1x.jpg, img/index-can-tablet@2x.jpg 2x">
+            <img class="introduction__image" src="img/index-can-mobile@1x.png" srcset="img/index-can-mobile@2x.png 2x" alt="Tagline Cat Energy Pro">
+          </picture>
+        </div>
+        <div class="introduction__link-wrapper container">
+          <a class="introduction__link button button--introduction" href="form.html">Подобрать программу</a>
         </div>
       </section>
     </header>
@@ -61,8 +74,8 @@
           </div>
         </div>
       </section>
-      <section class="features container">
-        <div class="features__wrapper">
+      <section class="features">
+        <div class="features__wrapper container">
           <h2 class="features__title title">Как это работает</h2>
           <ul class="features__list">
             <li class="features__item features__item--healthy">
@@ -81,7 +94,7 @@
         </div>
       </section>
     </main>
-    <footer class="page-footer container">
+    <footer class="page-footer">
       <div class="page-footer__links">
         <div class="page-footer__logo-wrapper">
           <a class="page-footer__logo-link">
@@ -102,7 +115,7 @@
           </ul>
         </div>
         <div class="page-footer__partner-container">
-          <a class="page-footer__partner-link" href="https://htmlacademy.ru/intensive/adaptive" aria-label="Ссылка на HTML Academy"><img class="page-footer__partner-logo" src="img/htmlacademy.svg" width="27" height="34" alt="HTML Academy"><span class="page-footer__partner-name">HTML Academy</span></a>
+          <a class="page-footer__partner-link" href="https://htmlacademy.ru/intensive/adaptive" aria-label="Ссылка на HTML Academy"><span class="page-footer__partner-name">HTML Academy</span><img class="page-footer__partner-logo" src="img/htmlacademy.svg" width="27" height="34" alt="HTML Academy"></a>
         </div>
       </div>
     </footer>
