--- a/source/catalog.html
+++ b/source/catalog.html
@@ -268,12 +268,12 @@
             </div>
           </div>
           <div class="catalog__item catalog__item--more">
-            <div class="catalog__item-info--more">
-              <h2 class="catalog__item-title--more">
+            <div class="catalog__item-info catalog__item-info--more">
+              <h2 class="catalog__item-title catalog__item-title--more">
                 <a href="#" class="catalog__item-link">Показать еще 100500 товаров</a>
               </h2>
               <p class="catalog__item-description catalog__item-description--more">На самом деле вкусов гораздо больше!</p>
-              <div class="catalog__button-container">
+              <div class="catalog__button-container catalog__button-container--more">
                 <a class="button button--grey" href="#">Показать все</a>
               </div>
             </div>
@@ -282,29 +282,41 @@
       </section>
     </main>
     <footer class="page-footer">
-      <div class="page-footer__links">
-        <div class="page-footer__logo-wrapper">
-          <a class="page-footer__logo-link">
-            <img class="page-footer__logo-image" src="img/logo-footer.svg" width="128" height="24" alt="Cat Energy">
-          </a>
+      <section class="page-footer__cooperation cooperation">
+        <div class="cooperation__wrapper container">
+          <div class="cooperation__tagline">
+            <p class="cooperation__tagline-text">приглашаем к сотрудничеству дилеров!</p>
+          </div>
+          <div class="cooperation__adress">
+            <p class="cooperation__adress-text">ул. Большая Конюшенная, д. 19/8 <span class="cooperation__adress-city">Санкт-Петербург</span></p>
+          </div>
         </div>
-        <div class="page-footer__social-container social-links">
-          <ul class="social-links__list">
-            <li class="social-links__item">
-              <a class="social-links__item-link" href="#" aria-label="«Cat Energy» во вКонтакте"><img src="img/icon-vk.svg" width="22" height="12" alt="вКонтакте"></a>
-            </li>
-            <li class="social-links__item">
-              <a class="social-links__item-link" href="#" aria-label="«Cat Energy» в Инстаграм"><img src="img/icon-insta.svg" width="17" height="17" alt="Инстаграм"></a>
-            </li>
-            <li class="social-links__item">
-              <a class="social-links__item-link" href="#" aria-label="«Cat Energy» на Фейсбуке"><img src="img/icon-fb.svg" width="10" height="19" alt="Фейсбук"></a>
-            </li>
-          </ul>
+      </section>
+      <section class="page-footer__links container">
+        <div class="page-footer__links-container">
+          <div class="page-footer__logo-wrapper">
+            <a class="page-footer__logo-link">
+              <img class="page-footer__logo-image" src="img/logo-footer.svg" width="128" height="24" alt="Cat Energy">
+            </a>
+          </div>
+          <div class="page-footer__social-container social-links">
+            <ul class="social-links__list">
+              <li class="social-links__item">
+                <a class="social-links__item-link" href="#" aria-label="«Cat Energy» во вКонтакте"><img src="img/icon-vk.svg" width="22" height="12" alt="вКонтакте"></a>
+              </li>
+              <li class="social-links__item">
+                <a class="social-links__item-link" href="#" aria-label="«Cat Energy» в Инстаграм"><img src="img/icon-insta.svg" width="17" height="17" alt="Инстаграм"></a>
+              </li>
+              <li class="social-links__item">
+                <a class="social-links__item-link" href="#" aria-label="«Cat Energy» на Фейсбуке"><img src="img/icon-fb.svg" width="10" height="19" alt="Фейсбук"></a>
+              </li>
+            </ul>
+          </div>
+          <div class="page-footer__partner-container">
+            <a class="page-footer__partner-link" href="https://htmlacademy.ru/intensive/adaptive" aria-label="Ссылка на HTML Academy"><span class="page-footer__partner-name">HTML Academy</span><img class="page-footer__partner-logo" src="img/htmlacademy.svg" width="27" height="34" alt="HTML Academy"></a>
+          </div>
         </div>
-        <div class="page-footer__partner-container">
-          <a class="page-footer__partner-link" href="https://htmlacademy.ru/intensive/adaptive" aria-label="Ссылка на HTML Academy"><span class="page-footer__partner-name">HTML Academy</span><img class="page-footer__partner-logo" src="img/htmlacademy.svg" width="27" height="34" alt="HTML Academy"></a>
-        </div>
-      </div>
-    </footer>
+      </footer>
+    </section>
   </body>
 </html>
