--- a/source/form.html
+++ b/source/form.html
@@ -8,50 +8,66 @@
   </head>
   <body>
     <header class="page-header">
-      <div class="main-navigation main-navigation__wrapper">
+      <div class="main-navigation main-navigation__wrapper container">
         <nav class="main-navigation__block">
           <a class="main-navigation__logo" href="index.html">
-            <img class="main-navigation__logo-image" src="img/logo-mobile.svg" width="191" height="39" alt="Cat Energy">
+            <picture>
+              <source media="(min-width: 1300px)" srcset="img/logo-desktop.svg">
+              <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
+              <img class="main-navigation__logo-image" src="img/logo-mobile.svg" width="191" height="39" alt="Cat Energy">
+            </picture>
           </a>
           <button class="main-navigation__toggle" type="button">Открыть меню</button>
-          <ul class="main-navigation__list site-list">
-            <li class="site-list__item">
-              <a class="site-list__item-link" href="index.html">Главная</a>
+          <ul class="main-navigation__list">
+            <li class="main-navigation__item">
+              <a class="main-navigation__link" href="index.html">Главная</a>
             </li>
-            <li class="site-list__item">
-              <a class="site-list__item-link" href="catalog.html">Каталог продукции</a>
+            <li class="main-navigation__item">
+              <a class="main-navigation__link" href="catalog.html">Каталог продукции</a>
             </li>
-            <li class="site-list__item  site-list__item--active">
-              <a class="site-list__item-link" href="#">Подбор программы</a>
+            <li class="main-navigation__item main-navigation__item--active">
+              <a class="main-navigation__link" href="#">Подбор программы</a>
             </li>
           </ul>
         </nav>
       </div>
     </header>
-    <footer class="page-footer container">
-      <div class="page-footer__links">
-        <div class="page-footer__logo-wrapper">
-          <a class="page-footer__logo-link">
-            <img class="page-footer__logo-image" src="img/logo-footer.svg" width="128" height="24" alt="Cat Energy">
-          </a>
+    <footer class="page-footer">
+      <section class="page-footer__cooperation cooperation">
+        <div class="cooperation__wrapper container">
+          <div class="cooperation__tagline">
+            <p class="cooperation__tagline-text">приглашаем к сотрудничеству дилеров!</p>
+          </div>
+          <div class="cooperation__adress">
+            <p class="cooperation__adress-text">ул. Большая Конюшенная, д. 19/8 <span class="cooperation__adress-city">Санкт-Петербург</span></p>
+          </div>
         </div>
-        <div class="page-footer__social-container social-links">
-          <ul class="social-links__list">
-            <li class="social-links__item">
-              <a class="social-links__item-link" href="#" aria-label="«Cat Energy» во вКонтакте"><img src="img/icon-vk.svg" width="22" height="12" alt="вКонтакте"></a>
-            </li>
-            <li class="social-links__item">
-              <a class="social-links__item-link" href="#" aria-label="«Cat Energy» в Инстаграм"><img src="img/icon-insta.svg" width="17" height="17" alt="Инстаграм"></a>
-            </li>
-            <li class="social-links__item">
-              <a class="social-links__item-link" href="#" aria-label="«Cat Energy» на Фейсбуке"><img src="img/icon-fb.svg" width="10" height="19" alt="Фейсбук"></a>
-            </li>
-          </ul>
+      </section>
+      <section class="page-footer__links container">
+        <div class="page-footer__links-container">
+          <div class="page-footer__logo-wrapper">
+            <a class="page-footer__logo-link">
+              <img class="page-footer__logo-image" src="img/logo-footer.svg" width="128" height="24" alt="Cat Energy">
+            </a>
+          </div>
+          <div class="page-footer__social-container social-links">
+            <ul class="social-links__list">
+              <li class="social-links__item">
+                <a class="social-links__item-link" href="#" aria-label="«Cat Energy» во вКонтакте"><img src="img/icon-vk.svg" width="22" height="12" alt="вКонтакте"></a>
+              </li>
+              <li class="social-links__item">
+                <a class="social-links__item-link" href="#" aria-label="«Cat Energy» в Инстаграм"><img src="img/icon-insta.svg" width="17" height="17" alt="Инстаграм"></a>
+              </li>
+              <li class="social-links__item">
+                <a class="social-links__item-link" href="#" aria-label="«Cat Energy» на Фейсбуке"><img src="img/icon-fb.svg" width="10" height="19" alt="Фейсбук"></a>
+              </li>
+            </ul>
+          </div>
+          <div class="page-footer__partner-container">
+            <a class="page-footer__partner-link" href="https://htmlacademy.ru/intensive/adaptive" aria-label="Ссылка на HTML Academy"><span class="page-footer__partner-name">HTML Academy</span><img class="page-footer__partner-logo" src="img/htmlacademy.svg" width="27" height="34" alt="HTML Academy"></a>
+          </div>
         </div>
-        <div class="page-footer__partner-container">
-          <a class="page-footer__partner-link" href="https://htmlacademy.ru/intensive/adaptive" aria-label="Ссылка на HTML Academy"><span class="page-footer__partner-name">HTML Academy</span><img class="page-footer__partner-logo" src="img/htmlacademy.svg" width="27" height="34" alt="HTML Academy"></a>
-        </div>
-      </div>
+      </section>
     </footer>
   </body>
 </html>
