--- a/source/catalog.html
+++ b/source/catalog.html
@@ -408,7 +408,7 @@
       </section>
     </main>
     <footer class="page-footer">
-      <section class="page-footer__cooperation cooperation">
+      <div class="page-footer__cooperation cooperation">
         <div class="cooperation__wrapper container">
           <div class="cooperation__tagline">
             <p class="cooperation__tagline-text">приглашаем к сотрудничеству дилеров!</p>
@@ -417,8 +417,8 @@
             <p class="cooperation__adress-text">ул. Большая Конюшенная, д. 19/8 <span class="cooperation__adress-city">Санкт-Петербург</span></p>
           </div>
         </div>
-      </section>
-      <section class="page-footer__links container">
+      </div>
+      <div class="page-footer__links container">
         <div class="page-footer__links-container">
           <div class="page-footer__logo-wrapper">
             <a class="page-footer__logo-link">
@@ -428,21 +428,21 @@
           <div class="page-footer__social-container social-links">
             <ul class="social-links__list">
               <li class="social-links__item">
-                <a class="social-links__item-link" href="#" aria-label="«Cat Energy» во вКонтакте"><svg class="social-links__item-image social-links__item-vk" width="22" height="12"><use xlink:href="#item-vk"></use></a>
+                <a class="social-links__item-link" href="#" aria-label="«Cat Energy» во вКонтакте"><svg class="social-links__item-image social-links__item-vk" width="22" height="12"><use xlink:href="#item-vk"></use></svg></a>
               </li>
               <li class="social-links__item">
-                <a class="social-links__item-link" href="#" aria-label="«Cat Energy» в Инстаграм"><svg class="social-links__item-image social-links__item-inst" width="17" height="17" alt="Инстаграм"><use xlink:href="#item-insta"></use></a>
+                <a class="social-links__item-link" href="#" aria-label="«Cat Energy» в Инстаграм"><svg class="social-links__item-image social-links__item-inst" width="17" height="17"><use xlink:href="#item-insta"></use></svg></a>
               </li>
               <li class="social-links__item">
-                <a class="social-links__item-link" href="#" aria-label="«Cat Energy» на Фейсбуке"><svg class="social-links__item-image social-links__item-fb" width="10" height="19" alt="Фейсбук"><use xlink:href="#item-fb"></use></a>
+                <a class="social-links__item-link" href="#" aria-label="«Cat Energy» на Фейсбуке"><svg class="social-links__item-image social-links__item-fb" width="10" height="19"><use xlink:href="#item-fb"></use></svg></a>
               </li>
             </ul>
           </div>
           <div class="page-footer__partner-container">
-            <a class="page-footer__partner-link" href="https://htmlacademy.ru/intensive/adaptive" aria-label="Ссылка на HTML Academy"><span class="page-footer__partner-name">HTML Academy</span><svg class="page-footer__partner-logo" width="27" height="34"><use xlink:href="#partner-logo"></a>
+            <a class="page-footer__partner-link" href="https://htmlacademy.ru/intensive/adaptive" aria-label="Ссылка на HTML Academy"><span class="page-footer__partner-name">HTML Academy</span><svg class="page-footer__partner-logo" width="27" height="34"><use xlink:href="#partner-logo"></use></svg></a>
           </div>
         </div>
-      </footer>
-    </section>
+      </div>
+    </footer>
   </body>
 </html>
