--- a/source/form.html
+++ b/source/form.html
@@ -29,6 +29,8 @@
       h2.8V9.1h2.9V6.8H5.9V6.3c0-1.4,0-2.6,0.7-3.1l0.1-0.1h2.1V1H6.5c-1.2,0.1-2,0.4-2.6,1c-0.8,0.8-1,2.3-0.8,4.2l0.1,0.6H1.1v2.3h2V18
       z"/></symbol>
     <symbol viewBox="0 0 60 60" id="partner-logo"><path d="M30.2 5h-.2l-19.7 2.1v36.2l19.7 11.7 19.7-11.7v-36.2l-19.5-2.1zm17 36.8l-17.2 10.2-17.2-10.2v-14.8l17.1 10.2v1.8l-11.7-7v1.8l11.8 7.1v1.9l-11.8-7v1.8l11.8 7 11.9-7.1v-7.6l5.3-3.2v15.1zm-.1-17l-4.7 2.8-2.2 1.3-10.3-6.1v1.8l8.8 5.3h-.1l-.2.1-1.3.7-7.3-4.3v1.8l5.8 3.4-1.4.9-4.3-2.6v1.8l2.9 1.7-2.9 1.7-17-10.1 17-10.2 17.2 10zm.1-1.8l-17.3-10.2-17.1 10.2v-13.6l17.2-1.8 17.2 1.8v13.6z"/></symbol>
+    <symbol viewBox="0 0 17 13" id="column-email"><path d="M15.6,11.6H1.4V5.8H0V13h17V5.8h-1.4V11.6z M0,0v2.3l8.5,7.1L17,2.3V0H0z M15.6,1.6L8.5,7.5L1.4,1.6V1.4h14.2L15.6,1.6z"/></symbol>
+    <symbol viewBox="0 0 20 20" id="column-phone"><path d="M17.9,9.4H9.4v1.2h8.5l-2.1,2.1l0.9,0.9l3.1-3.1c0.2-0.2,0.2-0.6,0-0.9l-3.1-3.1l-0.9,0.9L17.9,9.4z"/><path d="M8.1,19.4v-6.2c0-0.3-0.3-0.6-0.6-0.6H4.4l0,0H3.1l0,0c0,0.7,0.6,1.2,1.2,1.2h2.5v5H3.1c-1,0.1-1.8-0.7-1.9-1.7 c0-0.1,0-0.1,0-0.2V3.1c0-1,0.8-1.8,1.7-1.8c0.1,0,0.1,0,0.2,0h3.7v5H4.4c-0.7,0-1.2,0.6-1.2,1.2h4.4c0.3,0,0.6-0.3,0.6-0.6V0.6 C8.1,0.3,7.8,0,7.5,0H3.1C1.5-0.1,0.1,1.2,0,2.9C0,3,0,3.1,0,3.1v13.7c 0.1,1.7,1.2,3.1,2.9,3.1c0.1,0,0.2,0,0.2,0h4.4 C7.8,20,8.1,19.7,8.1,19.4z"/></symbol>
   </svg>
 
     <header class="page-header">
@@ -41,7 +43,9 @@
               <img class="main-navigation__logo-image" src="img/logo-mobile.svg" width="191" height="39" alt="Cat Energy">
             </picture>
           </a>
-          <button class="main-navigation__toggle" type="button">Открыть меню</button>
+          <div class="main-navigation__toggle-container">
+            <button class="main-navigation__toggle" type="button">Открыть меню</button>
+          </div>
           <ul class="main-navigation__list">
             <li class="main-navigation__item">
               <a class="main-navigation__link" href="index.html">Главная</a>
@@ -49,23 +53,137 @@
             <li class="main-navigation__item">
               <a class="main-navigation__link" href="catalog.html">Каталог продукции</a>
             </li>
-            <li class="main-navigation__item main-navigation__item--active">
-              <a class="main-navigation__link" href="#">Подбор программы</a>
+            <li class="main-navigation__item">
+              <a class="main-navigation__link main-navigation__link--active main-navigation__link--green" href="#">Подбор программы</a>
             </li>
           </ul>
         </nav>
       </div>
     </header>
+    <main class="page-main">
+      <section class="selection">
+        <div class="selection__title-container container">
+          <h1 class="selection__title">Подбор программы</h1>
+          <p class="selection__tagline">Заполните анкету и мы подберем программу питания для вашего кота</p>
+        </div>
+        <form class="choice" action="https://echo.htmlacademy.ru" method="post">
+          <div class="choice__columns-container">
+            <div class="choice__columns">
+              <div class="choice__column choice__column--profile container container-2">
+                <fieldset class="choice__column-data">
+                  <h2 class="visually-hidden">Анкета для кота</h2>
+                  <label class="choice__column-area">
+                    <span class="choice__column-text">Имя:*</span>
+                    <input class="choice__column-field" type="text" placeholder="Барсик" required>
+                  </label>
+                  <label class="choice__column-area">
+                    <span class="choice__column-text">Вес (кг):*</span>
+                    <input class="choice__column-field" type="text" placeholder="7" required>
+                  </label>
+                  <label class="choice__column-area">
+                    <span class="choice__column-text">Возраст (лет):</span>
+                    <input class="choice__column-field" type="text" placeholder="7">
+                  </label>
+                </fieldset>
+              </div>
+              <div class="choice__column choice__column--diets">
+                <fieldset class="choice__column-data container">
+                  <ul class="choice__column-filter">
+                    <li class="choice__column-item">
+                      <input class="choice__column-radio" type="radio" id="radio-1" name="choice" checked>
+                      <label class="choice__column-form" for="radio-1">Похудение</label>
+                    </li>
+                    <li class="choice__column-item">
+                      <input class="choice__column-radio" type="radio" id="radio-2" name="choice">
+                      <label class="choice__column-form" for="radio-2">Набор массы</label>
+                    </li>
+                    <li class="choice__column-item">
+                      <input class="choice__column-radio" type="radio" id="radio-3" name="choice">
+                      <label class="choice__column-form" for="radio-3">Не знаю (Нужен ваш совет)</label>
+                    </li>
+                  </ul>
+                </fieldset>
+              </div>
+            </div>
+            <div class="choice__column choice__column--contacts container container-2">
+              <fieldset class="choice__column-data choice__column-data--contacts">
+                <h2 class="choice__column-title choice__column-title--contacts">Контактные данные (владельца кота)</h2>
+                <div class="choice__columns-layout">
+                  <label class="choice__column-area choice__column-area--email">
+                    <span class="choice__column-text">E-mail:*</span>
+                    <input class="choice__column-field" type="text" placeholder="kuklachev@gmail.com" required>
+                    <svg class="choice__column-image choice__column-image--email" width="18" height="14"><use xlink:href="#column-email"></use></svg>
+                  </label>
+                  <label class="choice__column-area choice__column-area--phone">
+                    <span class="choice__column-text">Телефон:*</span>
+                    <input class="choice__column-field" type="text" placeholder="8 (960) 900-60-90" required>
+                    <svg class="choice__column-image choice__column-image--phone" width="21" height="21"><use xlink:href="#column-phone"></use></svg>
+                  </label>
+                </div>
+              </fieldset>
+            </div>
+            <div class="choice__column choice__column--comment container container-2">
+              <h2 class="choice__column-title">Комментарий</h2>
+              <label class="choice__column-story" for="column-textarea"></label>
+              <textarea class="choice__column-field" rows="7" id="column-textarea" placeholder="Расскажите обо всех повадках кота"></textarea>
+            </div>
+            <div class="choice__column choice__column--additionally container container-2">
+              <h2 class="choice__column-title">Дополнительно</h2>
+              <ul class="choice__column-checks">
+                <li class="choice__column-item choice__column-item--checkbox">
+                  <input class="choice__column-checkbox" type="checkbox" id="check-1" checked>
+                  <label class="choice__column-form choice__column-form--checkbox" for="check-1">Сахарозаменитель</label>
+                </li>
+                <li class="choice__column-item choice__column-item--checkbox">
+                  <input class="choice__column-checkbox" type="checkbox" id="check-2">
+                  <label class="choice__column-form choice__column-form--checkbox" for="check-2">Питьевая вода</label>
+                </li>
+                <li class="choice__column-item choice__column-item--checkbox">
+                  <input class="choice__column-checkbox" type="checkbox" id="check-3">
+                  <label class="choice__column-form choice__column-form--checkbox" for="check-3">Молоко</label>
+                </li>
+                <li class="choice__column-item choice__column-item--checkbox">
+                  <input class="choice__column-checkbox" type="checkbox" id="check-4">
+                  <label class="choice__column-form choice__column-form--checkbox" for="check-4">Витамины</label>
+                </li>
+              </ul>
+            </div>
+            <div class="choice__column choice__column--submit container container-2">
+              <button class="button button--submit" type="submit">Отправить заявку</button>
+              <div class="choice__column-words">
+                <p class="choice__column-important">* — Обязательные поля</p>
+              </div>
+            </div>
+          </div>
+        </form>
+      </section>
+    </main>
     <footer class="page-footer">
       <div class="page-footer__cooperation cooperation">
-        <div class="cooperation__wrapper container">
-          <div class="cooperation__tagline">
-            <p class="cooperation__tagline-text">приглашаем к сотрудничеству дилеров!</p>
-          </div>
-          <div class="cooperation__adress">
-            <p class="cooperation__adress-text">ул. Большая Конюшенная, д. 19/8 <span class="cooperation__adress-city">Санкт-Петербург</span></p>
+        <div class="cooperation__layout container">
+          <div class="cooperation__wrapper cooperation__wrapper--white">
+            <div class="cooperation__tagline">
+              <p class="cooperation__tagline-text">приглашаем к сотрудничеству дилеров!</p>
+            </div>
+            <div class="cooperation__adress">
+              <p class="cooperation__adress-text">ул. Большая Конюшенная, д. 19/8 <span class="cooperation__adress-city">Санкт-Петербург</span></p>
+            </div>
           </div>
         </div>
+        <section class="cooperation__map">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037999040354!2d30.322010416394033!3d59.938716271971415!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2sBolshaya+Konyushennaya+ul.%2C+19%2C+Sankt-Peterburg%2C+Russia%2C+191186!5e0!3m2!1sen!2s!4v1441888483426" height="400" allowfullscreen=""></iframe>
+          <div class="cooperation__map-container">
+            <h2 class="visually-hidden">Карта</h2>
+            <picture>
+              <source type="image/webp" media="(min-width: 1300px)" srcset="img/bg-map-desktop@1x.webp, img/bg-map-desktop@2x.webp 2x">
+              <source type="image/webp" media="(min-width: 768px)" srcset="img/bg-map-tablet@1x.webp, img/bg-map-tablet@2x.webp 2x">
+              <source type="image/webp" srcset="img/bg-map-mobile@1x.webp, img/bg-map-mobile@2x.webp 2x">
+              <source media="(min-width: 1300px)" srcset="img/bg-map-desktop@1x.png, img/bg-map-desktop@2x.png 2x">
+              <source media="(min-width: 768px)" srcset="img/bg-map-tablet@1x.png, img/bg-map-tablet@2x.png 2x">
+              <img class="cooperation__map-image" src="img/bg-map-mobile@1x.png" srcset="img/bg-map-mobile@2x.png 2x" alt="Схема проезда ул. Большая Конюшенная, д. 19/8 Санкт-Петербург">
+            </picture>
+          </div>
+        </section>
       </div>
       <div class="page-footer__links container">
         <div class="page-footer__links-container">
@@ -93,5 +211,6 @@
         </div>
       </div>
     </footer>
+    <script src="js/navigation-open-close.js"></script>
   </body>
 </html>
