--- a/source/index.html
+++ b/source/index.html
@@ -41,10 +41,12 @@
               <img class="main-navigation__logo-image" src="img/logo-mobile.svg" width="191" height="39" alt="Cat Energy">
             </picture>
           </a>
-          <button class="main-navigation__toggle" type="button">Открыть меню</button>
+          <div class="main-navigation__toggle-container">
+            <button class="main-navigation__toggle" type="button">Открыть меню</button>
+          </div>
           <ul class="main-navigation__list">
-            <li class="main-navigation__item main-navigation__item--active">
-              <a class="main-navigation__link main-navigation__link--white" href="#">Главная</a>
+            <li class="main-navigation__item">
+              <a class="main-navigation__link main-navigation__link--active main-navigation__link--white" href="#">Главная</a>
             </li>
             <li class="main-navigation__item">
               <a class="main-navigation__link main-navigation__link--white" href="catalog.html">Каталог продукции</a>
@@ -123,8 +125,8 @@
         </div>
       </section>
       <section class="live-example">
-        <div class="live-example__wrapper container">
-          <div class="live-example__layout">
+        <div class="live-example__wrapper">
+          <div class="live-example__layout container">
             <h2 class="live-example__title">Живой пример</h2>
             <div class="live-example__description">
               <div class="live-example__story">
@@ -151,41 +153,43 @@
               </div>
             </div>
           </div>
-          <div class="live-example__toggle-container toggle">
-            <input class="toggle__input toggle__input--before visually-hidden" type="radio" id="live-example-before" name="toggle">
-            <input class="toggle__input toggle__input--after visually-hidden" type="radio" id="live-example-after" name="toggle">
-            <div class="toggle__items">
-              <div class="toggle__item toggle__item--before">
-                <picture>
-                  <source type="image/webp" media="(min-width: 1300px)" srcset="img/before-desktop@1x.webp, img/before-desktop@2x.webp 2x">
-                  <source type="image/webp" media="(min-width: 768px)" srcset="img/before-tablet@1x.webp, img/before-tablet@2x.webp 2x">
-                  <source type="image/webp" srcset="img/before-mobile@1x.webp, img/before-mobile@2x.webp 2x">
-                  <source media="(min-width: 1300px)" srcset="img/before-desktop@1x.png, img/before-desktop@2x.png 2x">
-                  <source media="(min-width: 768px)" srcset="img/before-tablet@1x.png, img/before-tablet@2x.png 2x">
-                  <img class="toggle__item-image toggle__item-image--before" src="img/before-mobile@1x.png" srcset="img/before-mobile@2x.png 2x" alt="Большой кот">
-                </picture>
-              </div>
-              <div class="toggle__item toggle__item--after">
-                <picture>
-                  <source type="image/webp" media="(min-width: 1300px)" srcset="img/after-desktop@1x.webp, img/after-desktop@2x.webp 2x">
-                  <source type="image/webp" media="(min-width: 768px)" srcset="img/after-tablet@1x.webp, img/after-tablet@2x.webp 2x">
-                  <source type="image/webp" srcset="img/after-mobile@1x.webp, img/after-mobile@2x.webp 2x">
-                  <source media="(min-width: 1300px)" srcset="img/after-desktop@1x.png, img/after-desktop@2x.png 2x">
-                  <source media="(min-width: 768px)" srcset="img/after-tablet@1x.png, img/after-tablet@2x.png 2x">
-                  <img class="toggle__item-image toggle__item-image--after" src="img/after-mobile@1x.png" srcset="img/after-mobile@2x.png 2x" alt="Большой кот">
-                </picture>
-              </div>
-            </div>
-            <div class="toggle__scale-container">
-              <label class="toggle__label toggle__label--before" for="live-example-before">Было</label>
-              <div class="toggle__scale-wrapper">
-                <div class="toggle__scale">
-                  <div class="toggle__scale-range toggle__scale-range--left"></div>
-                  <div class="toggle__scale-range toggle__scale-range--right"></div>
-                  <button class="toggle__scale-button" type="button"></button>
+          <div class="live-example__toggle-layout">
+            <div class="live-example__toggle-container toggle">
+              <input class="toggle__input toggle__input--before visually-hidden" type="radio" id="live-example-before" name="toggle">
+              <input class="toggle__input toggle__input--after visually-hidden" type="radio" id="live-example-after" name="toggle">
+              <div class="toggle__items">
+                <div class="toggle__item toggle__item--before">
+                  <picture>
+                    <source type="image/webp" media="(min-width: 1300px)" srcset="img/before-desktop@1x.webp, img/before-desktop@2x.webp 2x">
+                    <source type="image/webp" media="(min-width: 768px)" srcset="img/before-tablet@1x.webp, img/before-tablet@2x.webp 2x">
+                    <source type="image/webp" srcset="img/before-mobile@1x.webp, img/before-mobile@2x.webp 2x">
+                    <source media="(min-width: 1300px)" srcset="img/before-desktop@1x.png, img/before-desktop@2x.png 2x">
+                    <source media="(min-width: 768px)" srcset="img/before-tablet@1x.png, img/before-tablet@2x.png 2x">
+                    <img class="toggle__item-image toggle__item-image--before" src="img/before-mobile@1x.png" srcset="img/before-mobile@2x.png 2x" alt="Большой кот">
+                  </picture>
+                </div>
+                <div class="toggle__item toggle__item--after">
+                  <picture>
+                    <source type="image/webp" media="(min-width: 1300px)" srcset="img/after-desktop@1x.webp, img/after-desktop@2x.webp 2x">
+                    <source type="image/webp" media="(min-width: 768px)" srcset="img/after-tablet@1x.webp, img/after-tablet@2x.webp 2x">
+                    <source type="image/webp" srcset="img/after-mobile@1x.webp, img/after-mobile@2x.webp 2x">
+                    <source media="(min-width: 1300px)" srcset="img/after-desktop@1x.png, img/after-desktop@2x.png 2x">
+                    <source media="(min-width: 768px)" srcset="img/after-tablet@1x.png, img/after-tablet@2x.png 2x">
+                    <img class="toggle__item-image toggle__item-image--after" src="img/after-mobile@1x.png" srcset="img/after-mobile@2x.png 2x" alt="Большой кот">
+                  </picture>
                 </div>
               </div>
-              <label class="toggle__label toggle__label--after" for="live-example-after">Стало</label>
+              <div class="toggle__scale-container">
+                <label class="toggle__label toggle__label--before" for="live-example-before">Было</label>
+                <div class="toggle__scale-wrapper">
+                  <div class="toggle__scale">
+                    <div class="toggle__scale-range toggle__scale-range--left"></div>
+                    <div class="toggle__scale-range toggle__scale-range--right"></div>
+                    <button class="toggle__scale-button" type="button"></button>
+                  </div>
+                </div>
+                <label class="toggle__label toggle__label--after" for="live-example-after">Стало</label>
+              </div>
             </div>
           </div>
         </div>
@@ -193,14 +197,30 @@
     </main>
     <footer class="page-footer">
       <div class="page-footer__cooperation cooperation">
-        <div class="cooperation__wrapper container">
-          <div class="cooperation__tagline">
-            <p class="cooperation__tagline-text">приглашаем к сотрудничеству дилеров!</p>
-          </div>
-          <div class="cooperation__adress">
-            <p class="cooperation__adress-text">ул. Большая Конюшенная, д. 19/8 <span class="cooperation__adress-city">Санкт-Петербург</span></p>
+        <div class="cooperation__layout container">
+          <div class="cooperation__wrapper cooperation__wrapper--white">
+            <div class="cooperation__tagline">
+              <p class="cooperation__tagline-text">приглашаем к сотрудничеству дилеров!</p>
+            </div>
+            <div class="cooperation__adress">
+              <p class="cooperation__adress-text">ул. Большая Конюшенная, д. 19/8 <span class="cooperation__adress-city">Санкт-Петербург</span></p>
+            </div>
           </div>
         </div>
+        <section class="cooperation__map">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037999040354!2d30.322010416394033!3d59.938716271971415!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2sBolshaya+Konyushennaya+ul.%2C+19%2C+Sankt-Peterburg%2C+Russia%2C+191186!5e0!3m2!1sen!2s!4v1441888483426" height="400" allowfullscreen=""></iframe>
+          <div class="cooperation__map-container">
+            <h2 class="visually-hidden">Карта</h2>
+            <picture>
+              <source type="image/webp" media="(min-width: 1300px)" srcset="img/bg-map-desktop@1x.webp, img/bg-map-desktop@2x.webp 2x">
+              <source type="image/webp" media="(min-width: 768px)" srcset="img/bg-map-tablet@1x.webp, img/bg-map-tablet@2x.webp 2x">
+              <source type="image/webp" srcset="img/bg-map-mobile@1x.webp, img/bg-map-mobile@2x.webp 2x">
+              <source media="(min-width: 1300px)" srcset="img/bg-map-desktop@1x.png, img/bg-map-desktop@2x.png 2x">
+              <source media="(min-width: 768px)" srcset="img/bg-map-tablet@1x.png, img/bg-map-tablet@2x.png 2x">
+              <img class="cooperation__map-image" src="img/bg-map-mobile@1x.png" srcset="img/bg-map-mobile@2x.png 2x" alt="Схема проезда ул. Большая Конюшенная, д. 19/8 Санкт-Петербург">
+            </picture>
+          </div>
+        </section>
       </div>
       <div class="page-footer__links container">
         <div class="page-footer__links-container">
@@ -228,5 +248,6 @@
         </div>
       </div>
     </footer>
+    <script src="js/navigation-open-close.js"></script>
   </body>
 </html>
